Header and main z-index fix

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,6 +2,11 @@
     position: relative;
 }
 
+main {
+    position: relative;
+    z-index: 1;
+}
+
 @media only screen and (min-width: 700px) {
     main {
         display: flex;
