--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,6 +1,7 @@
 header {
     position: sticky;
     top: 0;
+    z-index: 9;
 }
 
 nav {
